Added a couple of images for hero section

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(/assets/images/flower-shop.jpg);"></div>
             <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(/assets/images/hairdresser.jpg)"></div>
             <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(/assets/images/dentist.jpg)"></div>
+            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(/assets/images/yoga.jpg)"></div>
           </div>
           <!-- If we need pagination -->
           <div class="swiper-pagination"></div>
