updated link addresses to relative

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
@@ -15,7 +15,7 @@
       <div class="container row">
         <a class="logo row">
           <img
-            src="/assets/images/lighthouse-logo.png"
+            src="assets/images/lighthouse-logo.png"
             alt="Lighthouse logo"
             width="200"
           />
@@ -191,7 +191,7 @@
       <div class="container">
         <a class="logo row">
           <img
-            src="/assets/images/lighthouse-logo.png"
+            src="assets/images/lighthouse-logo.png"
             alt="Lighthouse logo"
             width="50"
           />
@@ -201,6 +201,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js">
     </script>
-    <script type="text/javascript" src="/assets/js/script.js"></script>
+    <script type="text/javascript" src="assets/js/script.js"></script>
   </body>
 </html>
