updated image links to relative

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
           <!-- Additional required wrapper -->
           <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(/assets/images/mens-clothes.jpg)"></div>
-            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(/assets/images/cross-fit.jpg);"></div>
-            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(/assets/images/pilates.jpg)"></div>
-            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(/assets/images/coffee-shop.jpg)"></div>
-            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(/assets/images/flower-shop.jpg);"></div>
-            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(/assets/images/hairdresser.jpg)"></div>
-            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(/assets/images/dentist.jpg)"></div>
-            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(/assets/images/yoga.jpg)"></div>
+            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(assets/images/mens-clothes.jpg)"></div>
+            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(assets/images/cross-fit.jpg);"></div>
+            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(assets/images/pilates.jpg)"></div>
+            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(assets/images/coffee-shop.jpg)"></div>
+            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(assets/images/flower-shop.jpg);"></div>
+            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(assets/images/hairdresser.jpg)"></div>
+            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(assets/images/dentist.jpg)"></div>
+            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(assets/images/yoga.jpg)"></div>
           </div>
           <!-- If we need pagination -->
           <div class="swiper-pagination"></div>
