added title to swiper and updated images

--- a/index.html
+++ b/index.html
@@ -43,21 +43,56 @@
 
     <main>
       <!-- Slider main container -->
-      
+
       <!-- Hero Section -->
       <section class="hero">
+        <h1 class="hero-heading">Whatever your business</h1>
         <div class="swiper">
           <!-- Additional required wrapper -->
           <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(assets/images/mens-clothes.jpg)"></div>
-            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(assets/images/cross-fit.jpg);"></div>
-            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(assets/images/pilates.jpg)"></div>
-            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(assets/images/coffee-shop.jpg)"></div>
-            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(assets/images/flower-shop.jpg);"></div>
-            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(assets/images/hairdresser.jpg)"></div>
-            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(assets/images/dentist.jpg)"></div>
-            <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(assets/images/yoga.jpg)"></div>
+            <!-- <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(assets/images/mens-clothes.jpg)"></div> -->
+            <div class="swiper-slide">
+              <div class="swiper-zoom-container">
+                <img class="swipe-img" src="assets/images/mens-clothes.jpg" />
+              </div>
+            </div>
+
+            <div
+              class="swiper-slide"
+              data-swiper-autoplay="4000"
+              style="background-image: url(assets/images/cross-fit.jpg)"
+            ></div>
+            <div
+              class="swiper-slide"
+              data-swiper-autoplay="4000"
+              style="background-image: url(assets/images/pilates.jpg)"
+            ></div>
+            <div
+              class="swiper-slide"
+              data-swiper-autoplay="4000"
+              style="background-image: url(assets/images/coffee-shop.jpg)"
+            ></div>
+            <div
+              class="swiper-slide"
+              data-swiper-autoplay="4000"
+              style="background-image: url(assets/images/flower-shop.jpg)"
+            ></div>
+            <div
+              class="swiper-slide"
+              data-swiper-autoplay="4000"
+              style="background-image: url(assets/images/hairdresser.jpg)"
+            ></div>
+            <div
+              class="swiper-slide"
+              data-swiper-autoplay="4000"
+              style="background-image: url(assets/images/dentist.jpg)"
+            ></div>
+            <div
+              class="swiper-slide"
+              data-swiper-autoplay="4000"
+              style="background-image: url(assets/images/yoga.jpg)"
+            ></div>
           </div>
           <!-- If we need pagination -->
           <div class="swiper-pagination"></div>
@@ -73,7 +108,7 @@
 
       <section class="who">
         <div class="container">
-          <h1>We are focused on your Business</h1>
+          <h1 class="section-title">We Develop your unique digital presence</h1>
 
           <div class="row wrap">
             <div class="personal col fade-in">
@@ -82,7 +117,7 @@
                 src="https://picsum.photos/400/300"
                 alt="sample image"
               />
-              <h2>We provide a Personalised service</h2>
+              <h2>Why create a digital presence?</h2>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
                 voluptates eum dolorum harum minima eos provident, voluptatem
@@ -199,8 +234,7 @@
       </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js">
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="assets/js/script.js"></script>
   </body>
 </html>
