updated font size using clamp

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
     />
-    <title>Lighthouse Web Development</title>
+    <title>Lighthouse Web Solutions</title>
   </head>
   <body>
     <header class="header">
@@ -34,7 +34,7 @@
             <li class="nav-item"><a class="nav-link" href="#">About us</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
             <button class="nav-item btn">
-              <a class="nav-link" href="/index.html">Book Free Consultation</a>
+              <a class="btn-link" href="/index.html">Book Free Consultation</a>
             </button>
           </ul>
         </nav>
@@ -47,51 +47,51 @@
       <!-- Hero Section -->
       <section class="hero">
         <h1 class="hero-heading">Whatever your business</h1>
-        <div class="swiper">
+        <div class="swiper" id="hero-swiper">
           <!-- Additional required wrapper -->
           <div class="swiper-wrapper">
             <!-- Slides -->
             <!-- <div class="swiper-slide" data-swiper-autoplay="4000" style="background-image: url(assets/images/mens-clothes.jpg)"></div> -->
             <div class="swiper-slide">
               <div class="swiper-zoom-container">
-                <img class="swipe-img" src="assets/images/mens-clothes.jpg" />
+                <img class="swipe-img" src="assets/images/mens-clothes.webp" />
               </div>
             </div>
 
             <div
               class="swiper-slide"
               data-swiper-autoplay="4000"
-              style="background-image: url(assets/images/cross-fit.jpg)"
+              style="background-image: url(assets/images/cross-fit.webp)"
             ></div>
             <div
               class="swiper-slide"
               data-swiper-autoplay="4000"
-              style="background-image: url(assets/images/pilates.jpg)"
+              style="background-image: url(assets/images/pilates.webp)"
             ></div>
             <div
               class="swiper-slide"
               data-swiper-autoplay="4000"
-              style="background-image: url(assets/images/coffee-shop.jpg)"
+              style="background-image: url(assets/images/coffee-shop.webp)"
             ></div>
             <div
               class="swiper-slide"
               data-swiper-autoplay="4000"
-              style="background-image: url(assets/images/flower-shop.jpg)"
+              style="background-image: url(assets/images/flower-shop.webp)"
             ></div>
             <div
               class="swiper-slide"
               data-swiper-autoplay="4000"
-              style="background-image: url(assets/images/hairdresser.jpg)"
+              style="background-image: url(assets/images/hairdresser.webp)"
             ></div>
             <div
               class="swiper-slide"
               data-swiper-autoplay="4000"
-              style="background-image: url(assets/images/dentist.jpg)"
+              style="background-image: url(assets/images/dentist.webp)"
             ></div>
             <div
               class="swiper-slide"
               data-swiper-autoplay="4000"
-              style="background-image: url(assets/images/yoga.jpg)"
+              style="background-image: url(assets/images/yoga.webp)"
             ></div>
           </div>
           <!-- If we need pagination -->
@@ -108,7 +108,7 @@
 
       <section class="who">
         <div class="container">
-          <h1 class="section-title">We Develop your unique digital presence</h1>
+          <h1 class="section-title">We will create a unique digital presence</h1>
 
           <div class="row wrap">
             <div class="personal col fade-in">
@@ -117,12 +117,9 @@
                 src="https://picsum.photos/400/300"
                 alt="sample image"
               />
-              <h2>Why create a digital presence?</h2>
+              <h2>The importance of a digital presence?</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
-                voluptates eum dolorum harum minima eos provident, voluptatem
-                atque temporibus optio. Nobis, soluta ipsa. Voluptates cum quam
-                ipsum porro tempora maiores?
+                Your online presence is the face of your business on the internet, and how it performs can determine how successfully you attract new customers and retain existing ones.
               </p>
             </div>
             <div class="business col fade-in">
