--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
       <section class="who">
         <div class="container">
-          <h1 class="section-title">We will create a unique digital presence</h1>
+          <h1 class="section-title">We will create a unique digital presence for your business</h1>
 
           <div class="row wrap">
             <div class="personal col fade-in">
@@ -117,9 +117,9 @@
                 src="https://picsum.photos/400/300"
                 alt="sample image"
               />
-              <h2>The importance of a digital presence?</h2>
+              <h2>The importance of a digital presence</h2>
               <p>
-                Your online presence is the face of your business on the internet, and how it performs can determine how successfully you attract new customers and retain existing ones.
+                Your online presence is the face of your business on the Internet, the first place prospective customers will look to find the services they need. Delivering a great website experience will will give you access to new customers and ensure you retain existing ones. We will collaborate with you to unlock these and many other benefits.
               </p>
             </div>
             <div class="business col fade-in">
@@ -128,12 +128,9 @@
                 src="https://picsum.photos/400/300"
                 alt="sample image"
               />
-              <h2>We focus on your business</h2>
+              <h2>Unlock the unique value of your business</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae
-                temporibus doloribus dolor odit vel, dicta laudantium at totam
-                consectetur voluptate harum praesentium eaque natus, sunt rerum
-                quisquam voluptates, neque quam!
+              With over 30 years of sales and leadership experience before becoming a web developer, I understand that the priority is to get the essence of your business proposition across to your customers. My commercial experience, understanding customer challenges and how to solve them, will help elevate your website from the crowd.
               </p>
             </div>
           </div>
@@ -145,7 +142,7 @@
           <h1>Our Website Development Services</h1>
 
           <div class="row wrap">
-            <div class="personal col fade-in">
+            <div class="web-design col fade-in">
               <img
                 class="card-image"
                 src="https://picsum.photos/400/300"
@@ -159,7 +156,21 @@
                 ipsum porro tempora maiores?
               </p>
             </div>
-            <div class="business col fade-in">
+            <div class="hosting col fade-in">
+              <img
+                class="card-image"
+                src="https://picsum.photos/400/300"
+                alt="sample image"
+              />
+              <h2>Web Hosting</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae
+                temporibus doloribus dolor odit vel, dicta laudantium at totam
+                consectetur voluptate harum praesentium eaque natus, sunt rerum
+                quisquam voluptates, neque quam!
+              </p>
+            </div>
+            <div class="web-redesign col fade-in">
               <img
                 class="card-image"
                 src="https://picsum.photos/400/300"
@@ -173,7 +184,7 @@
                 quisquam voluptates, neque quam!
               </p>
             </div>
-            <div class="personal col fade-in">
+            <div class="ecomm col fade-in">
               <img
                 class="card-image"
                 src="https://picsum.photos/400/300"
@@ -187,13 +198,13 @@
                 ipsum porro tempora maiores?
               </p>
             </div>
-            <div class="business col fade-in">
+            <div class="booking col fade-in">
               <img
                 class="card-image"
                 src="https://picsum.photos/400/300"
                 alt="sample image"
               />
-              <h2>Reservation Systems</h2>
+              <h2>Booking/Reservation Systems</h2>
               <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae
                 temporibus doloribus dolor odit vel, dicta laudantium at totam
@@ -201,13 +212,30 @@
                 quisquam voluptates, neque quam!
               </p>
             </div>
+              <div class="management col fade-in">
+                <img
+                  class="card-image"
+                  src="https://picsum.photos/400/300"
+                  alt="sample image"
+                />
+                <h2>Website Management</h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae
+                  temporibus doloribus dolor odit vel, dicta laudantium at totam
+                  consectetur voluptate harum praesentium eaque natus, sunt rerum
+                  quisquam voluptates, neque quam!
+                </p>
+            </div>
           </div>
         </div>
       </section>
 
       <section class="about">
         <div class="container">
-          <h1>About us</h1>
+          <h1>About me</h1>
+          <h2>Hi, I'm Steve</h2>
+          <p>First of all the techie bit!  I have studied Full Stack Software Development.  What does that mean?  It means I understand not just how to design, create and style websites (using technologies such as HTML, CSS & JavaScript and jQuery) but also how to create server side software (using technology such as Python).  I can create your databases for storing customer information, bookings, etc.  I use frameworks such as Flask and Django to build complex full stack software applications.</p>
+          <p>I believe what will differentiate me as a business partner for you is my commercial background.  I worked for over 30 years in Sales, Sales and Business Leadership for both small and large technology companies including Cisco Systems and Hewlett Packard helping customers on their digital transformation journies. I have worked with customers across many different verticals, focusing on understnading their unqique business challenges and coming up with clever technology solutions for them</p>
         </div>
       </section>
 
@@ -215,6 +243,28 @@
         <div class="container">
           <h1>Contact</h1>
           <h3>Let us know a little about your project</h3>
+
+          <form action="">
+            <!-- checkboxes -->
+            <input type="checkbox" id="newweb" name="new_website" value="New Website">
+            <label for="neweb">New Website</label>
+            <input type="checkbox" id="updateweb" name="update_website" value="Update Website">
+            <label for="updateweb">Update Existing Website</label>
+            <input type="checkbox" id="webhost" name="web_host" value="Web Hosting">
+            <label for="webhost">Web Hosting</label><br><br>
+
+            <!-- contact details -->
+            <label for="fname">First name:</label>
+            <input type="text" id="fname" name="fname">
+            <label for="lname">Last name:</label>
+            <input type="text" id="lname" name="lname"><br>
+            <label for="email">Email address:</label>
+            <input type="email" id="email" name="email">
+            <label for="tel_no">Tel Number:</label>
+            <input type="tel" id="tel_no" name="tel_no"><br>
+
+            <input class="btn" type="submit" value="Submit">
+          </form>
         </div>
       </section>
     </main>
