added and styled contact form

--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
 
       <section class="who">
         <div class="container">
-          <h1 class="section-title">We will create a unique digital presence for your business</h1>
+          <h1 class="section-title">
+            We will create a unique digital presence for your business
+          </h1>
 
           <div class="row wrap">
             <div class="personal col fade-in">
@@ -119,7 +121,12 @@
               />
               <h2>The importance of a digital presence</h2>
               <p>
-                Your online presence is the face of your business on the Internet, the first place prospective customers will look to find the services they need. Delivering a great website experience will will give you access to new customers and ensure you retain existing ones. We will collaborate with you to unlock these and many other benefits.
+                Your online presence is the face of your business on the
+                Internet, the first place prospective customers will look to
+                find the services they need. Delivering a great website
+                experience will will give you access to new customers and ensure
+                you retain existing ones. We will collaborate with you to unlock
+                these and many other benefits.
               </p>
             </div>
             <div class="business col fade-in">
@@ -130,7 +137,12 @@
               />
               <h2>Unlock the unique value of your business</h2>
               <p>
-              With over 30 years of sales and leadership experience before becoming a web developer, I understand that the priority is to get the essence of your business proposition across to your customers. My commercial experience, understanding customer challenges and how to solve them, will help elevate your website from the crowd.
+                With over 30 years of sales and leadership experience before
+                becoming a web developer, I understand that the priority is to
+                get the essence of your business proposition across to your
+                customers. My commercial experience, understanding customer
+                challenges and how to solve them, will help elevate your website
+                from the crowd.
               </p>
             </div>
           </div>
@@ -212,19 +224,19 @@
                 quisquam voluptates, neque quam!
               </p>
             </div>
-              <div class="management col fade-in">
-                <img
-                  class="card-image"
-                  src="https://picsum.photos/400/300"
-                  alt="sample image"
-                />
-                <h2>Website Management</h2>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae
-                  temporibus doloribus dolor odit vel, dicta laudantium at totam
-                  consectetur voluptate harum praesentium eaque natus, sunt rerum
-                  quisquam voluptates, neque quam!
-                </p>
+            <div class="management col fade-in">
+              <img
+                class="card-image"
+                src="https://picsum.photos/400/300"
+                alt="sample image"
+              />
+              <h2>Website Management</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae
+                temporibus doloribus dolor odit vel, dicta laudantium at totam
+                consectetur voluptate harum praesentium eaque natus, sunt rerum
+                quisquam voluptates, neque quam!
+              </p>
             </div>
           </div>
         </div>
@@ -234,36 +246,74 @@
         <div class="container">
           <h1>About me</h1>
           <h2>Hi, I'm Steve</h2>
-          <p>First of all the techie bit!  I have studied Full Stack Software Development.  What does that mean?  It means I understand not just how to design, create and style websites (using technologies such as HTML, CSS & JavaScript and jQuery) but also how to create server side software (using technology such as Python).  I can create your databases for storing customer information, bookings, etc.  I use frameworks such as Flask and Django to build complex full stack software applications.</p>
-          <p>I believe what will differentiate me as a business partner for you is my commercial background.  I worked for over 30 years in Sales, Sales and Business Leadership for both small and large technology companies including Cisco Systems and Hewlett Packard helping customers on their digital transformation journies. I have worked with customers across many different verticals, focusing on understnading their unqique business challenges and coming up with clever technology solutions for them</p>
+          <p>
+            First of all the techie bit! I have studied Full Stack Software
+            Development. What does that mean? It means I understand not just how
+            to design, create and style websites (using technologies such as
+            HTML, CSS & JavaScript and jQuery) but also how to create server
+            side software (using technology such as Python). I can create your
+            databases for storing customer information, bookings, etc. I use
+            frameworks such as Flask and Django to build complex full stack
+            software applications.
+          </p>
+          <p>
+            I believe what will differentiate me as a business partner for you
+            is my commercial background. I worked for over 30 years in Sales,
+            Sales and Business Leadership for both small and large technology
+            companies including Cisco Systems and Hewlett Packard helping
+            customers on their digital transformation journies. I have worked
+            with customers across many different verticals, focusing on
+            understnading their unqique business challenges and coming up with
+            clever technology solutions for them
+          </p>
         </div>
       </section>
 
       <section class="contact">
         <div class="container">
           <h1>Contact</h1>
-          <h3>Let us know a little about your project</h3>
+          
 
           <form action="">
             <!-- checkboxes -->
-            <input type="checkbox" id="newweb" name="new_website" value="New Website">
-            <label for="neweb">New Website</label>
-            <input type="checkbox" id="updateweb" name="update_website" value="Update Website">
-            <label for="updateweb">Update Existing Website</label>
-            <input type="checkbox" id="webhost" name="web_host" value="Web Hosting">
-            <label for="webhost">Web Hosting</label><br><br>
-
+            <div class="checkboxes">
+              <input
+                type="checkbox"
+                id="newweb"
+                name="new_website"
+                value="New Website"
+              />
+              <label for="neweb">New Website</label>
+              <input
+                type="checkbox"
+                id="updateweb"
+                name="update_website"
+                value="Update Website"
+              />
+              <label for="updateweb">Update Existing Website</label>
+              <input
+                type="checkbox"
+                id="webhost"
+                name="web_host"
+                value="Web Hosting"
+              />
+              <label for="webhost">Web Hosting</label><br /><br />
+            </div>
             <!-- contact details -->
-            <label for="fname">First name:</label>
-            <input type="text" id="fname" name="fname">
-            <label for="lname">Last name:</label>
-            <input type="text" id="lname" name="lname"><br>
-            <label for="email">Email address:</label>
-            <input type="email" id="email" name="email">
-            <label for="tel_no">Tel Number:</label>
-            <input type="tel" id="tel_no" name="tel_no"><br>
+            <div class="contact-details">
+              <label for="name">Name: </label><br>
+              <input type="text" id="name" name="name" required/><br>
+              <label for="company">Company: </label><br>
+              <input type="text" id="company" name="company" required/><br>
+              <label for="email">Email: </label><br>
+              <input type="email" id="email" name="email" required/><br>
+              <label for="tel_no">Telephone: </label><br>
+              <input type="tel" id="tel_no" name="tel_no" /><br/>
+              <textarea name="decription" id="description" cols="80" width rows="10">Tell us a little about your project please</textarea>
+              
+            </div>
 
-            <input class="btn" type="submit" value="Submit">
+            <input class="btn" type="submit" value="Submit" />
           </form>
         </div>
       </section>
